--- a/BethanysPieShopHRM.Blazor/BethanysPieShopHRM.Blazor.csproj
+++ b/BethanysPieShopHRM.Blazor/BethanysPieShopHRM.Blazor.csproj
@@ -15,4 +15,10 @@
     <ProjectReference Include="..\BethanysPieShopHRM.Shared\BethanysPieShopHRM.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\css\app.css">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
