--- a/BethanysPieShopHRM.Api/BethanysPieShopHRM.Api.csproj
+++ b/BethanysPieShopHRM.Api/BethanysPieShopHRM.Api.csproj
@@ -22,6 +22,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\BethanysPieShopHRM.Blazor\BethanysPieShopHRM.Blazor.csproj" />
 	  <ProjectReference Include="..\BethanysPieShopHRM.Shared\BethanysPieShopHRM.Shared.csproj" />
 	</ItemGroup>
 
