--- a/BethanysPieShopHRM.Api/appsettings.json
+++ b/BethanysPieShopHRM.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-THVE26J;Database=BethanysPieShopHRM;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "DefaultConnection": "Server=DESKTOP-THVE26J;Database=BethanysPieShopHRM;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
